Removed outdated commands (/help, /exit, etc.), and fixed bug where /jt and /et would freeze on input with additional whitespaces.

--- a/react_files/app/src/css_files/TomoChat.css
+++ b/react_files/app/src/css_files/TomoChat.css
@@ -65,12 +65,13 @@
 }
 
 .help_page{
-    height: 500px;
+    height: auto;
     overflow: auto;
     border: solid 20px #000000;
     border-radius: .7em;
     box-sizing: border-box;
     margin-top: 20px;
+    padding-bottom: 20px;
     color: rgb(255, 255, 255);
     background-color: rgb(68, 68, 68);
 }
